# turn_based_strategy

./: Cargo.toml
res/: data.yaml  data_2.yaml  data_jt.yaml  data_zigge.yaml  t.yaml
res/maps/: jt.yaml  map.yaml
res/maps_zigge/: back_new.yaml  fore_new.yaml  map.yaml
src/: camera.rs  event.rs  main.rs  map.rs  scene.rs
src/entities/: mod.rs  player.rs
src/io/: mod.rs  resource.rs
src/net/: client.rs  mod.rs  packet.rs  server.rs
src/scenes/: editor.rs  game.rs  main_menu.rs  mod.rs
