[package]
name = "turn_based_strategy"
version = "0.1.0"
authors = ["romptroll <romptroll@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = {path = "../../game_engine_project/engine"}
yaml-rust = "0.4.3"
bus = "2.2.3"
rand = "0.7.3"
lazy_static = "*"